objects/niq__Prediction__c.object
<CustomObject>
    <description>This object defines the financial institution’s prediction models.</description>
    <fields>
        <fullName>niq__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this required boolean field to activate a prediction. By default it is false, which indicates that a prediction is inactive.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>niq__Prediction_Endpoint__c</fullName>
        <description>Administrators populate this optional text field with the callout URL for the prediction endpoint.</description>
        <inlineHelpText>Enter the callout URL for this prediction endpoint.</inlineHelpText>
        <label>Prediction Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__Short_Description__c</fullName>
        <description>Users populate this required field to describe the prediction.</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>niq__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Prediction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Predictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>